# ZebraLoader

./: .gitignore  LICENSE  Makefile  Makefile.in  README.md  configure  configure.ac  startup.nsh
.github/workflows/: check_compile.yml  codeql.yml
include/: bmp.h  def.h  elf.h  loader.h  menu.h  string.h
include/dev/: disk.h  gop.h
include/mm/: pmm.h  vmm.h
include/proto/: vega.h
src/: font.c  loader.c  main.c  main.d  menu.c  printf.c  string.c
src/dev/: disk.c  gop.c
src/include/: conf.h  def.h  font.h  loader.h  menu.h  printf.h  stdarg.h  string.h  types.h  zebra_proto.h
src/include/dev/: disk.h  gop.h
src/include/mm/: pmm.h  vmm.h
src/mm/: pmm.c  vmm.c
tools/: cross.sh
